added new files to SMA/S3

--- a/filieres/sma/s3/index.html
+++ b/filieres/sma/s3/index.html
@@ -72,6 +72,109 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
+            <div id="lt1" class="text-xl font-bold pb-4">Analyse 4</div>
+            <table class="w-full border border-gray-300">
+                <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (21_22).pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Analyse 4/Analyse 4 - Cours - Cours (21_22).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 4 - Cours - Cours (21_22).pdf" href="../../../media/sma/s3/Analyse 4/Analyse 4 - Cours - Cours (21_22).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Module -->
+        <div class="module sm:rounded p-4 my-2 bg-white">
+            <!-- Module name -->
+            <div id="lt1" class="text-xl font-bold pb-4">Analyse 5</div>
+            <table class="w-full border border-gray-300">
+                <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 1.pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Analyse 5/Analyse 5 - Cours - Chapitre (20_21) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 5 - Cours - Chapitre (20_21) 1.pdf" href="../../../media/sma/s3/Analyse 5/Analyse 5 - Cours - Chapitre (20_21) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 2.pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Analyse 5/Analyse 5 - Cours - Chapitre (20_21) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 5 - Cours - Chapitre (20_21) 2.pdf" href="../../../media/sma/s3/Analyse 5/Analyse 5 - Cours - Chapitre (20_21) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (21_22) 3.pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Analyse 5/Analyse 5 - Cours - Chapitre (21_22) 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 5 - Cours - Chapitre (21_22) 3.pdf" href="../../../media/sma/s3/Analyse 5/Analyse 5 - Cours - Chapitre (21_22) 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 1 [avec correction].pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Analyse 5/Analyse 5 - TDs - TD (22_23) 1 [avec correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 5 - TDs - TD (22_23) 1 [avec correction].pdf" href="../../../media/sma/s3/Analyse 5/Analyse 5 - TDs - TD (22_23) 1 [avec correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 2 [avec correction].pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Analyse 5/Analyse 5 - TDs - TD (22_23) 2 [avec correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 5 - TDs - TD (22_23) 2 [avec correction].pdf" href="../../../media/sma/s3/Analyse 5/Analyse 5 - TDs - TD (22_23) 2 [avec correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 3 [avec correction].pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Analyse 5/Analyse 5 - TDs - TD (22_23) 3 [avec correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 5 - TDs - TD (22_23) 3 [avec correction].pdf" href="../../../media/sma/s3/Analyse 5/Analyse 5 - TDs - TD (22_23) 3 [avec correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Module -->
+        <div class="module sm:rounded p-4 my-2 bg-white">
+            <!-- Module name -->
+            <div id="lt1" class="text-xl font-bold pb-4">Algebre 4</div>
+            <table class="w-full border border-gray-300">
+                <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (22_23) 1.pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Algebre 4/Algebre 4 - Cours - Chapitre (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Algebre 4 - Cours - Chapitre (22_23) 1.pdf" href="../../../media/sma/s3/Algebre 4/Algebre 4 - Cours - Chapitre (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 1.pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Algebre 4/Algebre 4 - TDs - TD (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Algebre 4 - TDs - TD (22_23) 1.pdf" href="../../../media/sma/s3/Algebre 4/Algebre 4 - TDs - TD (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Module -->
+        <div class="module sm:rounded p-4 my-2 bg-white">
+            <!-- Module name -->
+            <div id="lt1" class="text-xl font-bold pb-4">Physique 5</div>
+            <table class="w-full border border-gray-300">
+                <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Cours [ecrit].pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Physique 5/Physique 5 - Cours - Cours [ecrit].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Physique 5 - Cours - Cours [ecrit].pdf" href="../../../media/sma/s3/Physique 5/Physique 5 - Cours - Cours [ecrit].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 1.pdf<span class="whitespace-pre"><a href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Physique 5 - TDs - TD (22_23) 1.pdf" href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 2.jpeg<span class="whitespace-pre"><a href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 2.jpeg" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Physique 5 - TDs - TD (22_23) 2.jpeg" href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 2.jpeg" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 4 [1].jpeg<span class="whitespace-pre"><a href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 4 [1].jpeg" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Physique 5 - TDs - TD (22_23) 4 [1].jpeg" href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 4 [1].jpeg" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 4 [2].jpeg<span class="whitespace-pre"><a href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 4 [2].jpeg" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Physique 5 - TDs - TD (22_23) 4 [2].jpeg" href="../../../media/sma/s3/Physique 5/Physique 5 - TDs - TD (22_23) 4 [2].jpeg" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Module -->
+        <div class="module sm:rounded p-4 my-2 bg-white">
+            <!-- Module name -->
             <div id="lt1" class="text-xl font-bold pb-4">Informatique 3 :<small class="pl-2 font-semibold text-gray-500">Algorithmique et Programmation</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
