New feature : Embeded PDF viewer | New Files : smi\s4

--- a/filieres/smi/index.html
+++ b/filieres/smi/index.html
@@ -72,6 +72,8 @@
 
             <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="./s5">S5</a>
 
+            <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="./s6">S6</a>
+
         </div>
 
     </main>
