--- a/filieres/smi/s6/index.html
+++ b/filieres/smi/s6/index.html
@@ -17,17 +17,17 @@
     <meta property='og:type' content='website'>
     <meta property='og:site_name' content='fpk-biblio.netlify.app'>
     <meta property="og:url" content="https://fpk-biblio.netlify.app/">
-    <meta property="og:title" content="FPK Bibliothèque | SMI S5">
+    <meta property="og:title" content="FPK Bibliothèque | SMI S6">
     <meta property="og:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
     <meta property="og:image"  content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
     <meta property="twitter:domain" content="fpk-biblio.netlify.app">
     <meta name="twitter:url" content="https://fpk-biblio.netlify.app/">
-    <meta name="twitter:title" content="FPK Bibliothèque | SMI S5">
+    <meta name="twitter:title" content="FPK Bibliothèque | SMI S6">
     <meta name="twitter:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
     <link rel='icon' href='../../../static/img/fpk_logo.svg'>
-    <title>FPK Biblio | SMI S5</title>
+    <title>FPK Biblio | SMI S6</title>
     <link rel="stylesheet" href="../../../static/css/main.css"/>
     <link rel="stylesheet" href="../../../static/css/fonawesome.css">
 </head>
@@ -62,7 +62,7 @@
                 <div class="flex items-center">
                 <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
                 <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2">
-                    S5
+                    S6
                 </span>
                 </div>
             </li>
@@ -80,9 +80,9 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (22_23) 1.pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Chapitre (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Administration Reseaux - Cours - Chapitre (22_23) 1.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Chapitre (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (22_23) 2.pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Chapitre (22_23) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Administration Reseaux - Cours - Chapitre (22_23) 2.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Chapitre (22_23) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (21_22).pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Cours (21_22).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Administration Reseaux - Cours - Cours (21_22).pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Cours (21_22).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (22_23) 1.pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Administration Reseaux - Cours - Chapitre (22_23) 1.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Chapitre (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (22_23) 2.pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Administration Reseaux - Cours - Chapitre (22_23) 2.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Chapitre (22_23) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (21_22).pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Administration Reseaux - Cours - Cours (21_22).pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - Cours - Cours (21_22).pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -90,7 +90,7 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">TDs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 1.pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TDs - TD (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Administration Reseaux - TDs - TD (22_23) 1.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TDs - TD (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TD (22_23) 1.pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Administration Reseaux - TDs - TD (22_23) 1.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TDs - TD (22_23) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -98,9 +98,9 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">TPs</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">TP (21_22) 1.pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Administration Reseaux - TPs - TP (21_22) 1.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">TP (21_22) 2.pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Administration Reseaux - TPs - TP (21_22) 2.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">TP (21_22) 3.pdf<span class="whitespace-nowrap"><a href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Administration Reseaux - TPs - TP (21_22) 3.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TP (21_22) 1.pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Administration Reseaux - TPs - TP (21_22) 1.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TP (21_22) 2.pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Administration Reseaux - TPs - TP (21_22) 2.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">TP (21_22) 3.pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Administration Reseaux - TPs - TP (21_22) 3.pdf" href="../../../media/smi/s6/Administration Reseaux/Administration Reseaux - TPs - TP (21_22) 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -108,5 +108,6 @@
         </div>
 
     </main>
+    <script src="../../../static/js/iframe.js"></script>
 </body>
 </html>
