--- a/filieres/sma/s1/index.html
+++ b/filieres/sma/s1/index.html
@@ -72,7 +72,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Analyse 1 :<small class="pl-2 font-semibold text-gray-500">Suites Numériques et Fonctions</small></div>
+            <div class="text-xl font-bold pb-4">Analyse 1 :<small class="pl-2 font-semibold text-gray-500">Suites Numériques et Fonctions</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -129,7 +129,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Algèbre 1 :</div>
+            <div class="text-xl font-bold pb-4">Algèbre 1 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -175,7 +175,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Algèbre 2 :</div>
+            <div class="text-xl font-bold pb-4">Algèbre 2 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -219,7 +219,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Physique 1 :<small class="pl-2 font-semibold text-gray-500">Mécanique du point</small></div>
+            <div class="text-xl font-bold pb-4">Physique 1 :<small class="pl-2 font-semibold text-gray-500">Mécanique du point</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -263,7 +263,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Physique 2 :<small class="pl-2 font-semibold text-gray-500">Thermodynamique</small></div>
+            <div class="text-xl font-bold pb-4">Physique 2 :<small class="pl-2 font-semibold text-gray-500">Thermodynamique</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -312,7 +312,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Informatique 1 :<small class="pl-2 font-semibold text-gray-500">Introduction a l'informatique</small></div>
+            <div class="text-xl font-bold pb-4">Informatique 1 :<small class="pl-2 font-semibold text-gray-500">Introduction a l'informatique</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -350,7 +350,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Langue et Terminologie 1 :</div>
+            <div class="text-xl font-bold pb-4">Langue et Terminologie 1 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
