--- a/filieres/sma/s3/index.html
+++ b/filieres/sma/s3/index.html
@@ -72,7 +72,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Analyse 4</div>
+            <div class="text-xl font-bold pb-4">Analyse 4</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -90,7 +90,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Analyse 5</div>
+            <div class="text-xl font-bold pb-4">Analyse 5</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -120,7 +120,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Algebre 4</div>
+            <div class="text-xl font-bold pb-4">Algebre 4</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -146,7 +146,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Physique 5</div>
+            <div class="text-xl font-bold pb-4">Physique 5</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -175,7 +175,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Informatique 3 :<small class="pl-2 font-semibold text-gray-500">Algorithmique et Programmation</small></div>
+            <div class="text-xl font-bold pb-4">Informatique 3 :<small class="pl-2 font-semibold text-gray-500">Algorithmique et Programmation</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
