--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -72,7 +72,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Programmation 1 :</div>
+            <div class="text-xl font-bold pb-4">Programmation 1 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -111,7 +111,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Algorithmique 2 :</div>
+            <div class="text-xl font-bold pb-4">Algorithmique 2 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -158,7 +158,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Systeme d'exploitation 1 :</div>
+            <div class="text-xl font-bold pb-4">Systeme d'exploitation 1 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -194,7 +194,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Probabilite & statistiques :</div>
+            <div class="text-xl font-bold pb-4">Probabilite & statistiques :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -272,7 +272,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Technologie du Web :</div>
+            <div class="text-xl font-bold pb-4">Technologie du Web :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -304,7 +304,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Electronique Numérique :</div>
+            <div class="text-xl font-bold pb-4">Electronique Numérique :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
