--- a/filieres/smi/s2/index.html
+++ b/filieres/smi/s2/index.html
@@ -72,7 +72,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Analyse 2 :</div>
+            <div class="text-xl font-bold pb-4">Analyse 2 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -121,7 +121,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Analyse 3 :</div>
+            <div class="text-xl font-bold pb-4">Analyse 3 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -160,7 +160,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Algebre 3 :</div>
+            <div class="text-xl font-bold pb-4">Algebre 3 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -210,7 +210,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Physique 3 :<small class="pl-2 font-semibold text-gray-500">Electrostatique et electrocinétique</small></div>
+            <div class="text-xl font-bold pb-4">Physique 3 :<small class="pl-2 font-semibold text-gray-500">Electrostatique et electrocinétique</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -237,7 +237,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Physique 4 :<small class="pl-2 font-semibold text-gray-500">Optique géométrique</small></div>
+            <div class="text-xl font-bold pb-4">Physique 4 :<small class="pl-2 font-semibold text-gray-500">Optique géométrique</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -285,7 +285,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Informatique 2 :<small class="pl-2 font-semibold text-gray-500">Algorithmique 1</small></div>
+            <div class="text-xl font-bold pb-4">Informatique 2 :<small class="pl-2 font-semibold text-gray-500">Algorithmique 1</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -320,7 +320,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Langue et Terminologie 2 :</div>
+            <div class="text-xl font-bold pb-4">Langue et Terminologie 2 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
