--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -72,7 +72,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Analyse Numerique :</div>
+            <div class="text-xl font-bold pb-4">Analyse Numerique :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -111,7 +111,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Structures des données :</div>
+            <div class="text-xl font-bold pb-4">Structures des données :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -140,7 +140,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Système d'exploitation 2 :</div>
+            <div class="text-xl font-bold pb-4">Système d'exploitation 2 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -158,7 +158,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Électromagnétisme :</div>
+            <div class="text-xl font-bold pb-4">Électromagnétisme :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -192,7 +192,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Architecture des ordinateurs :</div>
+            <div class="text-xl font-bold pb-4">Architecture des ordinateurs :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -220,7 +220,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="lt1" class="text-xl font-bold pb-4">Programmation 2 :</div>
+            <div class="text-xl font-bold pb-4">Programmation 2 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
