--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -72,7 +72,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">UML :<small class="pl-2 font-semibold text-gray-500">Conception Orientée Objet</small></div>
+            <div class="text-xl font-bold pb-4">UML :<small class="pl-2 font-semibold text-gray-500">Conception Orientée Objet</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -101,7 +101,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">POO :<small class="pl-2 font-semibold text-gray-500">Programmation Orientée Objet</small></div>
+            <div class="text-xl font-bold pb-4">POO :<small class="pl-2 font-semibold text-gray-500">Programmation Orientée Objet</small></div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -132,7 +132,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Réseau :</div>
+            <div class="text-xl font-bold pb-4">Réseau :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -170,7 +170,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Bases de données :</div>
+            <div class="text-xl font-bold pb-4">Bases de données :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -218,7 +218,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Compilation :</div>
+            <div class="text-xl font-bold pb-4">Compilation :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
@@ -239,7 +239,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Recherche Opérationnelle :</div>
+            <div class="text-xl font-bold pb-4">Recherche Opérationnelle :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
