--- a/filieres/smi/s6/index.html
+++ b/filieres/smi/s6/index.html
@@ -72,7 +72,7 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div id="analyse1" class="text-xl font-bold pb-4">Administration Réseaux</div>
+            <div class="text-xl font-bold pb-4">Administration Réseaux</div>
             <table class="w-full border border-gray-300">
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
